--- a/index.html
+++ b/index.html
@@ -3,11 +3,18 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style.css"
     <title>Meus objetivos do ano</title>
 </head>
 <body>
     <section class="conteudo-pricipal"
         <h2 class="titulo-principal">Meus objetivos do ano_</h2>
+    <div class="botoes">
+        <button class="botao">Cursos na Alura</button>
+        <button class="botao">Criar projetos em Javascript
+        <button class="botao">Criar um portfolio</button>
+        <button class="botao">Atualizar meu currículo</button>
+     </div>
 </section>
 </body>
 </html>
